Adding tech to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -149,6 +149,10 @@
 										<h5 class="card-title"><a href="projects/forest-ai.html" class="theme-link">Forest AI</a></h5>
 										<p class="card-text"></p>
 										<p class="card-text"><small class="text-muted">Client: Google</small></p>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">NodeJS</button>
+										<button class="badge rounded-pill border mb-1">React</button>
+										<button class="badge rounded-pill border mb-1">Keras</button>
 									</div>
 								</div>
 							</div>
@@ -178,6 +182,9 @@
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
 										<p class="card-text"><small class="text-muted">Client: Fusion HQ</small></p>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">NodeJS</button>
+										<button class="badge rounded-pill border mb-1">React</button>
 									</div>
 								</div>
 							</div>
@@ -207,6 +214,9 @@
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
 										<p class="card-text"><small class="text-muted">Client: Credit Suisse</small></p>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">Keras</button>
+										<button class="badge rounded-pill border mb-1">NLP</button>
 									</div>
 								</div>
 							</div>
@@ -314,12 +324,11 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/projects/project-7.jpg" class="card-img" alt="image">
+									<img src="assets/images/projects/image-reflection-removal.jpg" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Single Image Reflection Removal</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
@@ -344,12 +353,11 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-8.jpg" class="card-img" alt="image">
+									<img src="assets/images/projects/FX.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Forex Ops Settlement</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
