--- a/academics.html
+++ b/academics.html
@@ -135,7 +135,7 @@
 						<div>
 							<button class="badge rounded-pill border mb-1">Statistical Machine Learning</button>
 							<button class="badge rounded-pill border mb-1">Pattern Recognition for Speech Signals</button>
-							<button class="badge rounded-pill border mb-1">Speech Signal Processing</button>
+							<button class="badge rounded-pill border mb-1">Business Intelligence and Analytics</button>
 							<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
 							<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
 							<button class="badge rounded-pill border mb-1">Random Processes</button>
@@ -183,12 +183,11 @@
 				<div class="col">
 					<h3 class="name font-weight-bold mt-3 mb-1">Emory University</h3>
 					<div class="tagline mb-3 font-italic">Graduate Student Researcher, Clifford Lab, Biomedical Informatics</div>
-
 					<div>
-						<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
-						<button class="badge rounded-pill border mb-1">Random Processes</button>
-						<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
-						<button class="badge rounded-pill border mb-1">Special Problems</button>
+						<button class="badge rounded-pill border mb-1">Audio Signal Processing</button>
+						<button class="badge rounded-pill border mb-1">React</button>
+						<button class="badge rounded-pill border mb-1">Python</button>
+						<button class="badge rounded-pill border mb-1">Bash</button>
 					</div>
 				</div>
 				<!--//col-->
@@ -205,10 +204,12 @@
 					<div class="tagline mb-3 font-italic">Undergraduate Student Researcher / Research Assistant, Electromagentism</div>
 
 					<div>
-						<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
-						<button class="badge rounded-pill border mb-1">Random Processes</button>
-						<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
-						<button class="badge rounded-pill border mb-1">Special Problems</button>
+						<button class="badge rounded-pill border mb-1">Degaussing</button>
+						<button class="badge rounded-pill border mb-1">Deperming</button>
+						<button class="badge rounded-pill border mb-1">Electromagnetics</button>
+						<button class="badge rounded-pill border mb-1">Convex Optimization</button>
+						<button class="badge rounded-pill border mb-1">MATLAB</button>
+						<button class="badge rounded-pill border mb-1">OPERA</button>
 					</div>
 				</div>
 				<!--//col-->
