--- a/blog-home.html
+++ b/blog-home.html
@@ -103,7 +103,7 @@
 
 
 					<div class="my-2">
-						<a class="btn btn-primary" href="contact.html" target="_blank"><i
+						<a class="btn btn-primary rounded-pill" href="contact.html" target="_blank"><i
 								class="fas fa-paper-plane me-2"></i>Hire Me</a>
 					</div>
 
@@ -148,31 +148,14 @@
 		<section class="blog-list px-3 py-5 p-md-5">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4 mb-3">
-						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-1.jpg" alt="image">
-							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">Top 3 JavaScript
-										Frameworks</a></h5>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-									commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
-									parturient...</p>
-								<p class="mb-0"><a class="text-link" href="blog-post.html">Read more &rarr;</a></p>
-
-							</div>
-							<div class="card-footer">
-								<small class="text-muted">Published 2 days ago</small>
-							</div>
-						</div>
-						<!--//card-->
-					</div>
 					<!--//col-->
 					<div class="col-md-4 mb-3">
 						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-2.jpg" alt="image">
+							<div class="col-12 col-xl-5 blog-img-holder">
+								<img class="card-img-top" src="assets/images/blogs/python-deb.png" alt="image">
+							</div>
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">About Remote
-										Working</a></h5>
+								<h5 class="card-title"><a class="theme-link" href="blog-post.html">RPM Packaging of Python Code</a></h5>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
 									commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
 									parturient...</p>
@@ -188,10 +171,11 @@
 					<!--//col-->
 					<div class="col-md-4 mb-3">
 						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-3.jpg" alt="image">
+							<div class="col-12 col-xl-5 blog-img-holder" style="width: 300px;">
+								<img class="card-img-top" src="assets/images/blogs/message-queue.png" alt="image">
+							</div>
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">A Guide to Becoming a
-										Full-Stack Developer</a></h5>
+								<h5 class="card-title"><a class="theme-link" href="blog-post.html">Message Queues in Web Services</a></h5>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
 									commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
 									parturient...</p>
@@ -206,10 +190,11 @@
 					<!--//col-->
 					<div class="col-md-4 mb-3">
 						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-4.jpg" alt="image">
+							<div class="col-12 col-xl-5 blog-img-holder" style="width: 300px;">
+								<img class="card-img-top" src="assets/images/blogs/wmd.png" alt="image">
+							</div>
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">High Performance
-										JavaScript</a></h5>
+								<h5 class="card-title"><a class="theme-link" href="blog-post.html"> Intro to Word Mover's distance</a></h5>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
 									commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
 									parturient...</p>
@@ -276,29 +261,6 @@
 	</div>
 	<!--//main-wrapper-->
 
-	<!-- *****CONFIGURE STYLE (REMOVE ON YOUR PRODUCTION SITE)****** -->
-	<div id="config-panel" class="config-panel config-panel-hide d-none d-lg-block">
-		<div class="panel-inner">
-			<a id="config-trigger" class="config-trigger text-center" href="#"><i class="fas fa-cog mx-auto"
-					data-fa-transform="down-6"></i></a>
-			<h5 class="panel-title">Choose Colour</h5>
-			<ul id="color-options" class="list-inline mb-0">
-				<li class="theme-1 active list-inline-item"><a data-style="assets/css/theme-1.css" href="#"></a></li>
-				<li class="theme-2  list-inline-item"><a data-style="assets/css/theme-2.css" href="#"></a></li>
-				<li class="theme-3  list-inline-item"><a data-style="assets/css/theme-3.css" href="#"></a></li>
-				<li class="theme-4  list-inline-item"><a data-style="assets/css/theme-4.css" href="#"></a></li>
-				<li class="theme-5  list-inline-item"><a data-style="assets/css/theme-5.css" href="#"></a></li>
-				<li class="theme-6  list-inline-item"><a data-style="assets/css/theme-6.css" href="#"></a></li>
-				<li class="theme-7  list-inline-item"><a data-style="assets/css/theme-7.css" href="#"></a></li>
-				<li class="theme-8  list-inline-item"><a data-style="assets/css/theme-8.css" href="#"></a></li>
-				<li class="theme-9  list-inline-item"><a data-style="assets/css/theme-9.css" href="#"></a></li>
-				<li class="theme-10  list-inline-item"><a data-style="assets/css/theme-10.css" href="#"></a></li>
-			</ul>
-			<a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
-		</div>
-		<!--//panel-inner-->
-	</div>
-	<!--//configure-panel-->
 
 	<!-- Javascript -->
 	<script src="assets/plugins/popper.min.js"></script>
@@ -308,8 +270,6 @@
 	<script src="assets/plugins/js-cookie.min.js"></script>
 	<script src="assets/js/dark-mode.js"></script>
 
-	<!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
-	<script src="assets/js/demo/style-switcher.js"></script>
 
 
 </body>
