Updating Latest Blogs

--- a/index.html
+++ b/index.html
@@ -468,7 +468,12 @@
 										<h5 class="card-title"><a href="project.html" class="theme-link">Forest AI</a></h5>
 										<p class="card-text">Forest AI is smart cloud connected hardware
 											solution that brings next-gen security to forest.</p>
-										<p class="card-text"><small class="text-muted">Client: Forest AI</small></p>
+											<p class="card-text"><small class="text-muted">Client: Forest AI</small></p>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">Keras</button>
+										<button class="badge rounded-pill border mb-1">Audio Processing</button>
+										<button class="badge rounded-pill border mb-1">NodeJS</button>
+										<button class="badge rounded-pill border mb-1">React</button>
 									</div>
 								</div>
 							</div>
@@ -498,6 +503,9 @@
 											engagement pltaform. Its built upon a simplified low-code mixpanel like analytics 
 											engine with visual analytics, push-notification and email/micro-surveys. </p>
 										<p class="card-text"><small class="text-muted">Client: Fusion</small></p>
+										<button class="badge rounded-pill border mb-1">NodeJS</button>
+										<button class="badge rounded-pill border mb-1">React</button>
+										<button class="badge rounded-pill border mb-1">User Behavior Analytics</button>
 									</div>
 								</div>
 							</div>
@@ -526,6 +534,14 @@
 										<p class="card-text">SMEBot is domain intelligent Deep Learning based contenxtual chatbot 
 											framework designed to ingest data documents and answer queries based on them.</p>
 										<p class="card-text"><small class="text-muted">Client: Credit Suisse</small></p>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">NLP</button>
+										<button class="badge rounded-pill border mb-1">Keras</button>
+										<button class="badge rounded-pill border mb-1">BERT</button>
+										<button class="badge rounded-pill border mb-1">ElMo</button>
+										<button class="badge rounded-pill border mb-1">ElasticSearch</button>
+										<button class="badge rounded-pill border mb-1">Deep Learning</button>
+
 									</div>
 								</div>
 							</div>
@@ -555,6 +571,10 @@
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
 										<p class="card-text"><small class="text-muted">Client: Credit Suisse</small></p>
+										<button class="badge rounded-pill border mb-1">Java</button>
+										<button class="badge rounded-pill border mb-1">C++</button>
+										<button class="badge rounded-pill border mb-1">Sybase</button>
+										<button class="badge rounded-pill border mb-1">Unix</button>
 									</div>
 								</div>
 							</div>
@@ -591,9 +611,11 @@
 				<div class="row">
 					<div class="col-md-4 mb-5">
 						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-1.jpg" alt="image">
+							<div class="col-12 col-xl-5 blog-img-holder">
+								<img class="card-img-top" src="assets/images/blogs/python-deb.png" alt="image">
+							</div>
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">RPM Packaging of Python </a></h5>
+								<h5 class="card-title"><a class="theme-link" href="blog-post.html">RPM Packaging of Python Code</a></h5>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
 									commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
 									parturient...</p>
@@ -609,10 +631,11 @@
 					<!--//col-->
 					<div class="col-md-4 mb-5">
 						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-2.jpg" alt="image">
+							<div class="col-12 col-xl-5 blog-img-holder" style="width: 300px;">
+								<img class="card-img-top" src="assets/images/blogs/message-queue.png" alt="image">
+							</div>
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">About Remote
-										Working</a></h5>
+								<h5 class="card-title"><a class="theme-link" href="blog-post.html">Message Queues in Web Services</a></h5>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
 									commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
 									parturient...</p>
@@ -628,10 +651,11 @@
 					<!--//col-->
 					<div class="col-md-4 mb-5">
 						<div class="card blog-post-card">
-							<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-3.jpg" alt="image">
+							<div class="col-12 col-xl-5 blog-img-holder" style="width: 300px;">
+								<img class="card-img-top" src="assets/images/blogs/wmd.png" alt="image">
+							</div>
 							<div class="card-body">
-								<h5 class="card-title"><a class="theme-link" href="blog-post.html">A Guide to Becoming a
-										Full-Stack Developer</a></h5>
+								<h5 class="card-title"><a class="theme-link" href="blog-post.html"> Intro to Word Mover's distance</a></h5>
 								<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
 									commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
 									parturient...</p>
