--- a/services.html
+++ b/services.html
@@ -148,7 +148,11 @@
 									<div class="professional-position-time">2020 - Present</div>
 								</div><!--//resume-timeline-item-header-->
 								<div class="professional-timeline-item-desc">
-									<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel.</p>
+									<ul> 
+										<li> Redesigned and implemented a multithreaded Credit Risk Calculation Engine providing Credit Risk Assessment of Wrong Way Risk Trades</li>
+										<li> Developed API server and a responsive and secured UI to monitor and control the end-to-end data flow, rebooting of computing clusters of Kafka and Hazelcast and fault detection mechanism in the calculation engine</li> 
+										<li> Developed Issuer Linking methodology to produce recommendation for missing data and thereby improving the data quality</li>
+									</ul>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 									<p>Praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
 									<ul>
@@ -182,7 +186,11 @@
 									<div class="professional-position-time">2016 - 2020</div>
 								</div><!--//resume-timeline-item-header-->
 								<div class="professional-timeline-item-desc">
-									<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel.</p>
+									<ul> 
+										<li> Designed a quantitative model to benchmark the risk associated with loans against the bonds with statistically matching profiles and generated the risk profile replacing the current methodology of the flat curve across the months </li> 
+										<li> Implemented the Wrong Way Risk Calculation Framework for FINMA and PRA </li>
+										<li> Developed Risk Weighted Asset Service to assess the risk associated with trades in stressed scenarios.</li> 
+									</ul>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Achievements</h4>
 									<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
@@ -210,8 +218,11 @@
 									<div class="professional-position-time">2012 - 2016</div>
 								</div><!--//resume-timeline-item-header-->
 								<div class="professional-timeline-item-desc">
-									<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.</p>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+									<ul> 
+										<li> Designed and implemented firm's internal chatbot framework SMEBot using NLP and deep learning techniques </li> 
+										<li> Implemented the Intent classifications and callbacks with ensemble of Word2Vec, GloVe, ElMo, ULMFit and BERT for dense representation of words and context capturing. </li>
+										<li>  Used Deep Learning based model QANet to produce the concise answer to the user queries. </li> 
+									</ul>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 									<ul class="list-inline">
 										<button class="badge rounded-pill border mb-1">Python</button>
@@ -237,7 +248,12 @@
 									<div class="resume-position-time">2011 - 2012</div>
 								</div><!--//resume-timeline-item-header-->
 								<div class="professional-timeline-item-desc">
-									<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum.</p>
+									<ul> 
+										<li> Worked in International Wealth Management (IWM) department to design and implement the product solutions for EMEA markets.</li>
+										<li> Created PoCs to automate the process of manual testing and SQL query generation. </li>
+										<li> Worked with consortium of European banks to create a solution to Digital Regulatory Reporting (DRR) which was accepted Financial Control Authority (FCA), UK</li> 
+									</ul>
+
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 									<ul class="list-inline">
 										<button class="badge rounded-pill border mb-1">.NET</button>
