Updating Skill page

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					<!--//item-->
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-python me-2"></i><i class="h-75 cib-django me-2" style="color:green"></i><i class="fa-sm cib-flask me-2" style="height:5px; color:black"></i></div>
+							<div class="item-icon"><span class="iconify" data-icon="vscode-icons:file-type-python" style="color: blue;"></span><span class="iconify" data-icon="bxl:flask"></span><span class="iconify" data-icon="vscode-icons:file-type-django" style="color: blue;"></span></div>
 							<h3 class="item-title">Python, Flask &amp; Django</h3>
 							<div class="item-desc">Proficient in developing the backend softwares and web services using <strong>Flask</strong> and <strong> Django</strong> </div>
 						</div>
@@ -190,9 +190,9 @@
 					<!--//item-->
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="cib-tensorflow me-2" style="color:orange"></i><i class="cib-keras me-2" style="color:red"></i></div>
-							<h3 class="item-title">Tensorflow, Scikit-Learn &amp; Keras</h3>
-							<div class="item-desc">Good in developing Neural network models using <strong>Keras</strong> and <strong>Tensorflow</strong>. 
+							<div class="item-icon"><i class="cib-pytorch me-2" style="color:#ee4c2c"></i><img src="assets/images/home/sklearn.png" width="60px" class="mb-3 me-2"><i class="cib-keras me-2" style="color:red"></i></div>
+							<h3 class="item-title">PyTorch, Scikit-Learn &amp; Keras</h3>
+							<div class="item-desc">Good in developing Neural network models using <strong>Keras</strong> and <strong>PyTorch</strong>. 
 								Worked extensively on neural models for Word and Sentence Embeddings </div>
 						</div>
 						<!--//item-inner-->
@@ -201,7 +201,7 @@
 
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="cib-apache-spark me-2" style="color: #E25A1C;"></i></div>
+							<div class="item-icon"><i class="cib-apache-spark me-2" style="color: #E25A1C;"></i> <span class="iconify mb-3" data-icon="logos:hadoop" style="color: blue;"></span></div>
 							<h3 class="item-title">Spark &amp; Hadoop, </h3>
 							<div class="item-desc">Experienced in developing pipelines for data ingestion and processing using <strong>Hadoop</strong> and <strong>Spark</strong></div>
 						</div>
@@ -230,9 +230,9 @@
 					<!--//item-->
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="cib-java me-2"></i><i class="cib-spring me-2" style="color: green;"></i></div>
-							<h3 class="item-title">Core Java &amp; SpringBoot</h3>
-							<div class="item-desc">Familiar with backend development with Core Java and SpringBoot</div>
+							<div class="item-icon"><img src="assets/images/home/apache_pig.png" width="50px"><img src="assets/images/home/hive.png" width="50px"><img src="assets/images/home/oozie.png" width="100px"></div>
+							<h3 class="item-title mt-2">Pig, Hive &amp; Oozie</h3>
+							<div class="item-desc">Familiar with <strong>Pig, Hive </strong> and <strong>Oozie</strong></div>
 						</div>
 						<!--//item-inner-->
 					</div>
@@ -682,6 +682,8 @@
 	</div>
 	<!--//main-wrapper-->
 
+	<!-- Icons -->
+	<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>	
 
 	<!-- Javascript -->
 	<script src="assets/plugins/popper.min.js"></script>
