--- a/services.html
+++ b/services.html
@@ -128,6 +128,46 @@
 					<div class="col">
 						<div class="row mb-4">
 							<div class="col mt-4">
+								<h3 class="professional-company-name font-weight-bold">Apple </h3>
+								<div class="tagline">Machine Learning Engineer </div>
+							</div>
+							<div class="col col-md-3 col-lg-3" style="text-align:center">
+								<img class="profile-image img-fluid mb-0 mb-lg-0 me-md-0" style="width: 50px;" src="assets/images/professional/Apple.png">
+							</div>
+						</div>
+					</div>	
+
+					<!--//col-->
+					<div class="professional-section-content">
+						<div class="professional-timeline position-relative">
+							<article class="professional-timeline-item position-relative pb-3">
+								
+								<div class="professional-timeline-item-header mb-2">
+									<div class="d-flex flex-column flex-md-row">
+										<h3 class="professional-position-title font-weight-bold mb-1">Machine Learning Intern</h3>
+									</div><!--//row-->
+									<div class="professional-position-time">May 2022 - Aug 2022</div>
+								</div><!--//resume-timeline-item-header-->
+								<div class="professional-timeline-item-desc">
+									<ul> 
+										<li> Cannot disclose the details about the project due to confidentiality</li>
+									</ul>
+									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+									<ul class="list-inline">
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">Flask</button>
+										<button class="badge rounded-pill border mb-1">PyTorch</button>
+										<button class="badge rounded-pill border mb-1">Scikit-Learn</button>
+										<button class="badge rounded-pill border mb-1">Natural Language Generation</button>
+									</ul>
+								</div><!--//resume-timeline-item-desc-->
+
+							</article><!--//resume-timeline-item-->
+					</div>
+
+					<div class="col">
+						<div class="row mb-4">
+							<div class="col mt-4">
 								<h3 class="professional-company-name font-weight-bold">Credit Suisse AG</h3>
 								<div class="tagline">Machine Learning Engineer / Software Developer</div>
 							</div>
@@ -271,8 +311,8 @@
 
 				</div>
 			</div>
-
-		</section>
+		</div>
+	</section>
 
 		
 
