Updating Fall 22 courses

--- a/academics.html
+++ b/academics.html
@@ -136,10 +136,13 @@
 							<button class="badge rounded-pill border mb-1">Statistical Machine Learning</button>
 							<button class="badge rounded-pill border mb-1">Pattern Recognition for Speech Signals</button>
 							<button class="badge rounded-pill border mb-1">Business Intelligence and Analytics</button>
-							<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
+							<button class="badge rounded-pill border mb-1">Computational Data Analytics</button>
+							<button class="badge rounded-pill border mb-1">Data Science for Social Networks</button>
 							<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
+							<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
 							<button class="badge rounded-pill border mb-1">Random Processes</button>
 							<button class="badge rounded-pill border mb-1">Special Problems</button>
+							<button class="badge rounded-pill border mb-1">Technology Entrepreneurship</button>
 						</div>
 					</div>
 					<!--//col-->
