--- a/academics.html
+++ b/academics.html
@@ -129,7 +129,7 @@
 					<div class="col">
 						<h3 class="name font-weight-bold mb-1">Georgia Institute of Technology</h3>
 						<div class="tagline mb-3 font-italic">Graduate Student in Electrical and Computer
-							Engineering (Aug 2021 - Present)
+							Engineering (Aug 2021 - Dec 2022)
 						</div>
 
 						<div>
@@ -137,7 +137,7 @@
 							<button class="badge rounded-pill border mb-1">Pattern Recognition for Speech Signals</button>
 							<button class="badge rounded-pill border mb-1">Business Intelligence and Analytics</button>
 							<button class="badge rounded-pill border mb-1">Computational Data Analytics</button>
-							<button class="badge rounded-pill border mb-1">Data Science for Social Networks</button>
+							<button class="badge rounded-pill border mb-1">Mathematical Foundations of Machine Learning</button>
 							<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
 							<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
 							<button class="badge rounded-pill border mb-1">Random Processes</button>
@@ -204,7 +204,7 @@
 			<div class="row mb-4">
 				<div class="col">
 					<h3 class="name font-weight-bold mt-3 mb-1">Center of Excellence in Nonlinear Dynamical Systems</h3>
-					<div class="tagline mb-3 font-italic">Undergraduate Student Researcher / Research Assistant, Electromagentism</div>
+					<div class="tagline mb-3 font-italic">Undergraduate Student Researcher / Research Assistant, Electromagnetism</div>
 
 					<div>
 						<button class="badge rounded-pill border mb-1">Degaussing</button>
