--- a/services.html
+++ b/services.html
@@ -144,13 +144,36 @@
 								
 								<div class="professional-timeline-item-header mb-2">
 									<div class="d-flex flex-column flex-md-row">
+										<h3 class="professional-position-title font-weight-bold mb-1">Machine Learning Engineer - III</h3>
+									</div><!--//row-->
+									<div class="professional-position-time">Jan 2023 - Present</div>
+								</div><!--//resume-timeline-item-header-->
+								<div class="professional-timeline-item-desc">
+									<ul> 
+										<li> Cannot disclose the details about the project due to Non-Disclosure Agreements</li>
+									</ul>
+									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+									<ul class="list-inline">
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">Flask</button>
+										<button class="badge rounded-pill border mb-1">PyTorch</button>
+										<button class="badge rounded-pill border mb-1">Scikit-Learn</button>
+										<button class="badge rounded-pill border mb-1">Transformers</button>
+									</ul>
+								</div><!--//resume-timeline-item-desc-->
+							</article><!--//resume-timeline-item-->
+
+							<article class="professional-timeline-item position-relative pb-3">
+								
+								<div class="professional-timeline-item-header mb-2">
+									<div class="d-flex flex-column flex-md-row">
 										<h3 class="professional-position-title font-weight-bold mb-1">Machine Learning Intern</h3>
 									</div><!--//row-->
 									<div class="professional-position-time">May 2022 - Aug 2022</div>
 								</div><!--//resume-timeline-item-header-->
 								<div class="professional-timeline-item-desc">
 									<ul> 
-										<li> Cannot disclose the details about the project due to confidentiality</li>
+										<li> Cannot disclose the details about the project due to Non-Disclosure Agreements</li>
 									</ul>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 									<ul class="list-inline">
